# CS199-128-Final-Project-FA25-

./: .gitattributes  .gitignore  .gitmodules  README.md  RUN.md  package-lock.json  package.json  plan.txt
.github/workflows/: release.yml
chat-server/: Cargo.toml  chat_database.sql  server.db
chat-server/cache/: chat_history.json
chat-server/src/: client_backend.rs  encryption.rs  io_handler.rs  lib.rs  main.rs  server.rs
gui/: package-lock.json  package.json  vite.config.ts
gui/app_data/cache/: Alice_admin.json  Danny_admin.json  Miaadmin.json  Reid_admin.json  RyanMia.json  Ryan_admin.json
gui/src/: App.css  App.tsx  ChatApp.tsx  LoginScreen.css  main.ts  main.tsx  types.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: commands.rs  encryption.rs  io_handler.rs  main.rs
gui/src/components/: ChatWindow.tsx  LoginScreen.tsx  Messagebar.tsx  RegisterScreen.tsx  Sidebar.tsx
